Reetan.Nayak Dev 25/force-app/main/default/objects/System_Event_Log__c/System_Event_Log__c.object-meta.xml
<CustomObject>
    <description>Custom object that holds all of the error,system,event logs generated on every code execution.</description>
    <label>System Event Log</label>
    <nameField>
        <displayFormat>SL-{00000}</displayFormat>
        <label>System Event Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Event Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>