Reetan.Nayak Dev 25/force-app/main/default/objects/System_Event_Log__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of System Event Log (Error,Debug,Info)</description>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>DEBUG</fullName>
            </value>
            <value>
                <fullName>INFO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>