Reetan.Nayak Dev 25/force-app/main/default/objects/System_Event_Log__c/fields/Log_Source__c.field-meta.xml
<CustomField>
    <fullName>Log_Source__c</fullName>
    <description>Name of Apex class/method where system event was originated</description>
    <label>Log Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>