Reetan.Nayak Dev 25/force-app/main/default/objects/System_Event_Log__c/fields/Related_Interface__c.field-meta.xml
<CustomField>
    <fullName>Related_Interface__c</fullName>
    <description>to identify the interface from which the Log is getting created</description>
    <label>Related Interface</label>
    <length>20</length>
    <type>Text</type>
</CustomField>