Reetan.Nayak Dev 25/force-app/main/default/objects/System_Event_Log__c/fields/Request_Time__c.field-meta.xml
<CustomField>
    <fullName>Request_Time__c</fullName>
    <description>For testing</description>
    <label>Request Time</label>
    <type>DateTime</type>
</CustomField>