Reetan.Nayak Dev 25/force-app/main/default/objects/System_Event_Log__c/fields/RequestTime_Text__c.field-meta.xml
<CustomField>
    <fullName>RequestTime_Text__c</fullName>
    <description>for testing</description>
    <label>RequestTime Text</label>
    <length>56</length>
    <type>Text</type>
</CustomField>