Reetan.Nayak Dev 25/force-app/main/default/objects/System_Event_Log__c/fields/Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_Time__c</fullName>
    <description>For Testing</description>
    <label>Response Time</label>
    <type>DateTime</type>
</CustomField>