Reetan.Nayak Dev 25/force-app/main/default/objects/System_Event_Log__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>Error code/Event code/Status code that identifies the log message</description>
    <label>Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>