Reetan.Nayak Dev 25/force-app/main/default/objects/System_Event_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Type__c</columns>
    <columns>Log_Source__c</columns>
    <columns>Message__c</columns>
    <columns>Status_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>